# CrealityPrint

./: .gitignore  BuildLinux.sh  BuildLinux_clang.sh  CMakeLists.txt  CMakePresets.json  README.md  Readme.md  build.bat  build_deps.bat  build_release.bat  build_release_macos.sh  build_release_vs2022.bat  run_gettext.bat  run_gettext.sh  version.inc
.githooks/: pre-commit
.github/workflows/: build_all.yml  build_deps.yml  build_orca.yml  check_locale.yml  check_profiles.yml  publish_docs_to_wiki.yml
clang-tidy/: .clang-tidy
cmake/: BuildInfoUtil.cmake
cmake/modules/: FindFFmpeg.cmake  NSIS.template.in
flatpak/: io.github.crealityofficial.CrealityPrint.metainfo.xml  io.github.crealityofficial.CrealityPrint.yml
linux.d/: debian
localization/i18n/: Community.pot  CrealityPrint.pot  DeviceList.pot  SendPage.pot  list.txt
package/: package.cmake
resources/images/: CrealityPrint.icns
resources/profiles/: Creality.json
scripts/: BuildLinux_Package.sh  ParamPackUtil.py  build_package_linux.sh  build_package_macos.sh  build_package_macos_offline.sh  generate_creality_presets.py  jenkins_package_build.bat  jenkins_package_build_offline.bat  sync_web.bat  sync_web.sh
src/: CMakeLists.txt  CrealityPrint.cpp  CrealityPrint_app_msvc.cpp  CrealityrintDump.cpp  CrealityrintDump.hpp  Crealityrint_dump.cpp  CxMiniDump.cpp
src/clipper/: clipper.cpp
src/imgui/: imconfig.h  imgui.h  imgui_widgets.cpp
src/libslic3r/: AppConfig.cpp  AppConfig.hpp  Arrange.cpp  Arrange.hpp  AutomationMgr.cpp  Brim.cpp  (+61 more)
src/video/: CMakeLists.txt  WebRTCDecoder.cpp  WebRTCDecoder.h
(+1193 files in other folders)
